@@ -113,6 +113,7 @@ STREAM: 2.0
   
   PRs Fixed in this Release
   ================================================================================
+  3230 		Search - Too many type references for query ending with * (1GAZVGI)
   
   PRs Closed in this Release
   ===============================================================================
